Upgrade Java from 11 to 21